--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "chart.js": "^4.5.1",
     "chess.js": "^1.0.0",
     "lucide-react": "^0.555.0",
     "next": "16.0.4",
     "react": "19.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-chessboard": "^4.7.3",
     "react-dom": "19.2.0",
     "zustand": "^5.0.8"
